--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,10 @@ glove/*
 .idea/
 __pycache__/
 output/checkpoints/*
-!output/checkpoints/*.py
+output/checkpoints/*.py
+train_smry.py
+README_copy.md
+tt.py
+data/__pycache__/
+methods/__pycache__/
+toolkit/encoder/__pycache__/
